--- a/template_waste_transfer_note.html
+++ b/template_waste_transfer_note.html
@@ -1181,7 +1181,7 @@
           Waste Carrier Licence Number: {{bCarrierNumber}}<br>
           {{#if vehicleReg}}
           Vehicle Reg: {{{vehicleReg}}}<br>
-          Container Type: Loose<br>
+          Container Type: Vehicle<br>
           Movement Type: Wait and Load
           {{/if}}
 
