--- a/template_waste_transfer_note.html
+++ b/template_waste_transfer_note.html
@@ -28,6 +28,7 @@
 
       * {
         box-sizing: border-box;
+        font-family: Poppins;
       }
 
       .page {
@@ -1170,7 +1171,7 @@
 
           <h4>CURRENT HOLDER OF THE WASTE - TRANSFEROR</h4>
           By signing in Section E below I confirm that I have fulfilled my duty to apply the waste hierarchy as required by Regulation 12 of the Waste (England and Wales) Regulations 2011:<br>
-          Name and Address: {{name}}, {{address}}<br>
+          Name: {{name}}<br>
           SIC Code: {{{clientSicCode}}}<br>
           {{{sicCodes}}}
 
