--- a/template_waste_transfer_note.html
+++ b/template_waste_transfer_note.html
@@ -1158,7 +1158,7 @@
 
           <h4>COLLECTION DETAILS</h4>
           Address of Transfer: {{trAddress}}<br>
-          Date & Time of Transfer: {{trDate}}<br>
+          Date & Time of Transfer: {{trDate}}
 
           <h4>DESCRIPTION OF WASTE</h4>
           Description of Waste: {{description}}<br>
@@ -1174,7 +1174,7 @@
           <h4>CURRENT HOLDER OF THE WASTE - TRANSFEROR</h4>
           By signing in Section E below I confirm that I have fulfilled my duty to apply the waste hierarchy as required by Regulation 12 of the Waste (England and Wales) Regulations 2011:<br>
           Name: {{name}}<br>
-          SIC Code: {{{clientSicCode}}}<br>
+          SIC Code: {{{clientSicCode}}}
           {{#if sicCodes}}
           {{{sicCodes}}}
           {{/if}}
