--- a/template_customer_jobcard.html
+++ b/template_customer_jobcard.html
@@ -50,7 +50,7 @@
     <div class="v1_893 scaled">
         <div class="v1_894"></div>
 				<div class="sep_1"></div>
-        <span class="v2_002"><img src = "https://firebasestorage.googleapis.com/v0/b/litta-technology.appspot.com/o/web_images%2FLITTA_Horizontal_Gloss_Logo.jpg?alt=media&token=4a540f9d-943e-408e-afe1-fa0f33ca0a73" width = 250px></span>
+        <span class="v2_002"><img src = "https://firebasestorage.googleapis.com/v0/b/litta-technology.appspot.com/o/web_images%2FLITTA_Horizontal_Gloss_Sustainable.png?alt=media&token=37cfb255-7e2a-4582-8487-de1ad3155451" height="57px"></span>
         <table>
 				<span class="v1_895">{{reference}}</span>
         <div class="v1_896">
@@ -98,7 +98,7 @@
                 <div class="v1_915"><img src="https://dl.airtable.com/.attachmentThumbnails/39ea13f4e88186b8b5dd4c01aded0234/d7e8bc31" width=50px></div>
             </div>
             <div class="v1_917">Company Registration No: 10882506<br>Environment Agency Registration No: CBDU375738</div>
-            <span class="v1_918"><a href="http://litta.co">litta.co</a></span><span class="v1_919"><a href="tel:+08000119492">0800 011 9492</a></span><span class="v1_920"><a href="mailto:hi@litta.co">hi@litta.co</a></span>
+            <span class="v1_918"><a href="http://litta.co">litta.co</a></span><span class="v1_919"><a href="tel:+442038680455">0203 868 0455</a></span><span class="v1_920"><a href="mailto:hi@litta.co">hi@litta.co</a></span>
         </div>
 
 
