--- a/template_payout_review.html
+++ b/template_payout_review.html
@@ -197,19 +197,19 @@
             </div>
             <div class="images">
               <span class="title">All After Images</span>
-              {{#each beforeImages}}
+              {{#each afterImages}}
                 <img src="{{this}}">
               {{/each}}
             </div>
             <div class="images">
               <span class="title">Van Before Images</span>
-              {{#each beforeImages}}
+              {{#each vanBeforeImages}}
                 <img src="{{this}}">
               {{/each}}
             </div>
             <div class="images">
               <span class="title">Van After Images</span>
-              {{#each beforeImages}}
+              {{#each vanAfterImages}}
                 <img src="{{this}}">
               {{/each}}
             </div>
