--- a/template_payout_review.html
+++ b/template_payout_review.html
@@ -10,10 +10,9 @@
     </script>
 
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+      /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"); */
 
       * {
-        font-family: "Poppins";
         box-sizing: border-box;
       }
 
