--- a/template_payout_review.html
+++ b/template_payout_review.html
@@ -10,9 +10,8 @@
     </script>
 
     <style>
-      /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"); */
-
       * {
+        font-family: Arial, Helvetica, sans-serif;
         box-sizing: border-box;
       }
 
