--- a/template_waste_transfer_note.html
+++ b/template_waste_transfer_note.html
@@ -2,33 +2,9 @@
 <html>
   <head>
     <style>
-      @font-face {
-        font-family: "Poppins";
-        src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-Regular.ttf") format("truetype");
-        font-weight: normal;
-      }
-
-      @font-face {
-        font-family: "Poppins";
-        src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-Medium.ttf") format("truetype");
-        font-weight: 500; 
-      }
-
-      @font-face {
-        font-family: "Poppins";
-        src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-SemiBold.ttf") format("truetype");
-        font-weight: 600; 
-      }
-
-      @font-face {
-        font-family: "Poppins";
-        src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-Bold.ttf") format("truetype");
-        font-weight: 900;
-      }
-
       * {
         box-sizing: border-box;
-        font-family: Poppins;
+        font-family: Arial, Helvetica, sans-serif;
       }
 
       .page {
@@ -654,7 +630,7 @@
         text-align: left;
       }
 
-      .v1_929 {
+      .v1_929 { 
         width: 62px;
         color: rgba(111, 111, 132, 1);
         position: absolute;
