--- a/template_payout_review.html
+++ b/template_payout_review.html
@@ -174,7 +174,7 @@
       <div class="page scaled">
         <div class="top-bar"></div>
         <div class="header">
-          <span>Partner Payout Review {{ reference }}</span>
+          <span>Partner Payout Review {{ reference }} ({{ postcode }})</span>
           <img
             class="logo"
             src="https://firebasestorage.googleapis.com/v0/b/litta-technology.appspot.com/o/web_images%2FLITTA_Horizontal_Gloss_Logo.jpg?alt=media&token=4a540f9d-943e-408e-afe1-fa0f33ca0a73"
@@ -239,7 +239,7 @@
             <div class="links">
               <a href="https://litta.co">litta.co</a>
               <a href="mailto:hi@litta.co">hi@litta.co</a>
-              <a href="tel:+08000119492">0800 011 9492</a>
+              <a href="tel:+443308186234">0330 818 6234</a>
             </div>
           </div>
         </div>
