updated broken images

--- a/template_quote.html
+++ b/template_quote.html
@@ -1020,7 +1020,7 @@
         <div class="v1_914">
           <div class="v1_915">
             <img
-              src="https://dl.airtable.com/.attachmentThumbnails/39ea13f4e88186b8b5dd4c01aded0234/d7e8bc31"
+              src="https://firebasestorage.googleapis.com/v0/b/litta-technology.appspot.com/o/web_images%2FGloss%20Icon.png?alt=media&token=73da9035-603e-478b-b5b6-2ae11b7d6c4c"
               width="50px"
             />
           </div>
@@ -1091,27 +1091,27 @@
         <a class="book_now" href="{{paymentLink}}">BOOK NOW</a>
         <span class="v2_003">
           <img
-            src="https://dl.airtable.com/.attachmentThumbnails/7ad95f9bc967d801c3e1a9babe9c8856/ad79be7b.png"
+            src="https://imagedelivery.net/YccOAjWLTnDVwCkdeA9L4A/2296c2a0-c1c5-45fe-846e-011a2a989100/public"
             height="17px"
           />
           <img
-            src="https://dl.airtable.com/.attachmentThumbnails/44f8b1c7fd0704b1d6fb52ebaaf653bb/7b8905e7.png"
+            src="https://imagedelivery.net/YccOAjWLTnDVwCkdeA9L4A/12c8ecc1-5d7a-439f-c56b-f17e0d720100/public"
             height="17px"
           />
           <img
-            src="https://dl.airtable.com/.attachmentThumbnails/42814fa8efeb6edd72004b55b5af0330/827de74e.png"
+            src="https://imagedelivery.net/YccOAjWLTnDVwCkdeA9L4A/a1c82a79-2d1e-4d07-619d-dba53fff2500/public"
             height="17px"
           />
           <img
-            src="https://dl.airtable.com/.attachmentThumbnails/7b2594912681cddc53eee86436a499d1/398a44e9.png"
+            src="https://imagedelivery.net/YccOAjWLTnDVwCkdeA9L4A/97f186f7-bfb2-4312-2d0f-f395b0736a00/public"
             height="17px"
           />
           <img
-            src="https://dl.airtable.com/.attachmentThumbnails/d217c6add288fda5925c36fa2b2043a8/913e1ffc.png"
+            src="https://imagedelivery.net/YccOAjWLTnDVwCkdeA9L4A/fddda7ed-51f5-4787-eed1-c56aa6433d00/public"
             height="17px"
           />
           <img
-            src="https://dl.airtable.com/.attachmentThumbnails/a1d212a160e2273ecde04b23370c7296/861c3bc3.png"
+            src="https://imagedelivery.net/YccOAjWLTnDVwCkdeA9L4A/271e1ff4-bf5d-4f78-f452-83e3aff7bb00/public"
             height="17px"
           />
         </span>
