--- a/template_waste_transfer_note.html
+++ b/template_waste_transfer_note.html
@@ -1212,7 +1212,7 @@
         <div class="v1_914">
           <div class="v1_915">
             <img
-              src="https://dl.airtable.com/.attachmentThumbnails/39ea13f4e88186b8b5dd4c01aded0234/d7e8bc31"
+              src="https://firebasestorage.googleapis.com/v0/b/litta-technology.appspot.com/o/web_images%2FGloss%20Icon.png?alt=media&token=73da9035-603e-478b-b5b6-2ae11b7d6c4c"
               width="50px"
             />
           </div>
