--- a/template_job_card.html
+++ b/template_job_card.html
@@ -45,7 +45,7 @@
 
 				<div class="v1_913">
             <div class="v1_914">
-                <div class="v1_915"><img src="https://dl.airtable.com/.attachmentThumbnails/39ea13f4e88186b8b5dd4c01aded0234/d7e8bc31" width=50px></div>
+                <div class="v1_915"><img src="https://firebasestorage.googleapis.com/v0/b/litta-technology.appspot.com/o/web_images%2FGloss%20Icon.png?alt=media&token=73da9035-603e-478b-b5b6-2ae11b7d6c4c" width=50px></div>
             </div>
             <div class="v1_917">Company Registration No: 10882506<br>Environment Agency Registration No: CBDU375738</div>
             <span class="v1_918"><a href="http://litta.co">litta.co</a></span><span class="v1_919"><a href="tel:+03308281287">0330 828 1287</a></span><span class="v1_920"><a href="mailto:commercial@litta.co">commercial@litta.co</a></span>
